fixed the precise map photo clipping when screen smaller

--- a/pages/detailed-offers-pages/detailed-offer-1.css
+++ b/pages/detailed-offers-pages/detailed-offer-1.css
@@ -195,7 +195,6 @@ input:focus {
 .detailed-offer-precise-location-map {
     margin-inline-start: 135px;
     filter: drop-shadow(0px 4px 20px rgba(71, 100, 195, 0.1));
-
 }
 
 .location-interest-div {
@@ -873,15 +872,22 @@ input:focus {
     .detailed-offer-info-title {
         font-size: 20px;
     }
-
-    .detailed-offer-precise-location-map {
-        margin-inline-start: 110px;
-        scale: 0.8;
-    }
-
     .detailed-offer-pictures-info-and-contact-info {
         flex-direction: column;
         align-items: center;
+    }
+    .detailed-offer-precise-location-map {
+        margin-inline-start: 242.5px;
+        max-width: 410px;
+        width: 110%;
+        min-width: 400px;
+        display: flex;
+        justify-content: center;
+    }
+    .detailed-offer-precise-location-map img{
+        max-width: 410px;
+        width: 100%;
+        min-width: 400px;
     }
     /* FIXING FOR MOBILE */
     .detailed-offer-contact-agent-apt-info {
@@ -967,6 +973,7 @@ input:focus {
     .inline-interested-in-imgs-with-paragraph-4 p {
         margin-inline-start: unset;
     }
+    
 }
 @media screen and (max-width: 400px){
     .big-apt-picture{
@@ -975,5 +982,18 @@ input:focus {
         margin-left: 237px;
         max-width: 420px;
         min-width: 420px;
+    }
+    .detailed-offer-precise-location-map {
+        margin-inline-start: 247.5px;
+        max-width: 400px;
+        width: 110%;
+        min-width: 300px;
+        display: flex;
+        justify-content: center;
+    }
+    .detailed-offer-precise-location-map img{
+        max-width: 400px;
+        width: 85%;
+        min-width: 300px;
     }
 }
